modules/gdscript/tests/scripts/analyzer/errors/access_level_private_func_callable.gd
class Foo:
    private func foo():
        pass

class Bar extends Foo:
    func bar():
        var t = foo
        t.call()

func test():
    pass
